# poc-namada-tx

./: .cosmos  .namada  Cargo.toml  README.md  SETUP.md
docs/: Setup.md
shielded/: .enve  Cargo.toml  README.md
shielded/src/: main.rs
simple/: README.md
simple/src/: main.rs
src/: config.rs  main.rs
