[package]
name = "namada-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.30.0", default-features = false, features = ["tendermint-rpc", "std", "async-client", "async-send", "download-params"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
dotenvy = "0.15.7"
tendermint-rpc = { version = "0.34.0", features = ["http-client"]}
axum = { version = "0.6.20", features = ["tower-log"] }
thiserror = "1.0.48"
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
